# MHRQI-GUI

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  COMPILE.MD  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  build_linux.sh  build_macos.sh  build_windows.ps1  circuit_text.txt  mkdocs.yml  pyproject.toml  run_gui.py
.disabled_configs/: ci.yml.disabled  pre-commit-config.yaml.disabled
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-build.yml
docs/: contributing.md  guide.md  index.md
docs/api/: benchmarks.md  core.md  denoising.md  utils.md
examples/: 01_Introduction_to_MHRQI.ipynb  02_MHRQI_Core_API.ipynb  03_Denoising_and_Advanced_Features.ipynb
mhrqi/: __init__.py  __main__.py
mhrqi/benchmarks/: __init__.py  compare_to.py  statistical_benchmark.py
mhrqi/cli/: main.py
mhrqi/core/: denoising.py  representation.py  results.py
mhrqi/gui/: __init__.py  main.py
mhrqi/utils/: general.py  visualization.py
tests/unit/: test_denoising.py  test_representation.py  test_results.py  test_utils.py
